[gd_scene load_steps=2 format=3 uid="uid://dofy021x46pkw"]

[ext_resource type="Script" uid="uid://eswv2s8be6fa" path="res://scripts/main_menu.gd" id="1_ekxnf"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ekxnf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.5
offset_top = -312.0
offset_right = 119.5
offset_bottom = -112.0
grow_horizontal = 2
grow_vertical = 0

[node name="start" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../exit")
theme_override_font_sizes/font_size = 28
text = "Start Game"

[node name="settings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Settings"

[node name="credits" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Credits"

[node name="exit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start")
theme_override_font_sizes/font_size = 28
text = "Exit"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="draw" from="CanvasLayer/VBoxContainer" to="." method="_on_v_box_container_draw"]
[connection signal="focus_entered" from="CanvasLayer/VBoxContainer/start" to="." method="_on_start_focus_entered"]
[connection signal="focus_exited" from="CanvasLayer/VBoxContainer/start" to="." method="_on_start_focus_exited"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="focus_exited" from="CanvasLayer/VBoxContainer/settings" to="." method="_on_settings_focus_exited"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="focus_exited" from="CanvasLayer/VBoxContainer/credits" to="." method="_on_credits_focus_exited"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="focus_exited" from="CanvasLayer/VBoxContainer/exit" to="." method="_on_exit_focus_exited"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
